# word_tokenization_with_spacy

./: README.md  pyproject.toml
.github/workflows/: CI.yml
src/word_tokenizer/: word_tokenizer_spacy.py
tests/: test_tokenizer_with_name_entity.py
